--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ body {
 }
 div {
     padding: 80px;
-    background: #ccc;
+    background: rgb(77, 255, 33);
     border: 3px solid #000;
     border-radius: 5px;
 }
